se añade contenido, rediseña y agrega style.scss

--- a/contacto.html
+++ b/contacto.html
@@ -2,144 +2,148 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+  <!-- Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 
-    <!-- AOS -->
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+  <!-- CSS -->
+  <link rel="stylesheet" href="style.css">
 
-    <!-- CSS -->
-    <link rel="stylesheet" href="style.css">
-
-    <title>Contacto</title>
+  <title>Contacto</title>
 </head>
 
-<body>
-    <div class="grid-container-contacto">
-        <div class="header-grid-contacto">
-            <!-- inicio de header -->
-            <header class="header-container">
-                <div class="logo-container"><a href="index.html"><img class="main-logo"
-                            src="resources/images/logos/PerfilB1.png" alt="Logo principal de home"></a></div>
-                <div class="title-container">
-                    <div>
-                        <h1 class="maintitle"><a class="maintitle" href="index.html">Anabella Avena</a></h1>
-                    </div>
-                    <div>
-                        <p class="subtitle">Ilustradora & Diseñadora Gráfica</p>
-                    </div>
-                </div>
-            </header>
-            <!-- fin de header -->
-        </div>
-        <div class="menu-grid-contacto">
-            <!-- menú principal -->
-            <nav class="navbar navbar-expand-md fondo-menu">
-                <div class="container-fluid d-flex justify-content-end">
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav mb-2 mb-lg-0">
-                            <li class="nav-item">
-                                <a aria-current="page" href="inicio.html">Inicio</a>
-                            </li>
-                            <li class="nav-item">
-                                <a aria-current="page" href="portfolio.html">Portfolio</a>
-                            </li>
-                            <li class="nav-item">
-                                <a aria-current="page" href="about-me.html">Sobre Mí</a>
-                            </li>
-                            <li class="nav-item">
-                                <a aria-current="page" href="tienda.html">Tienda</a>
-                            </li>
-                            <li class="nav-item">
-                                <a aria-current="page" href="contacto.html">Contacto</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
-            <!-- fin de menú principal -->
-        </div>
+<body class="grid-container-contacto">
+  <!-- inicio de header -->
+  <header class="header-grid-contacto" id="header">
+    <div class="logo-container"><a href="index.html"><img class="main-logo" src="resources/images/logos/PerfilF1.png"
+          alt="Logo principal de home"></a>
+    </div>
+    <div class="title-container">
+      <div>
+        <h1 class="maintitle"><a class="maintitle" href="index.html">Anabella Avena</a></h1>
+      </div>
+      <div>
+        <p class="subtitle">Ilustradora Freelance</p>
+      </div>
+    </div>
+    <nav class="redes-sociales-nav-top">
+      <ul class="redes-sociales-top">
+        <li class="enlaces"><a href="https://www.instagram.com/anabella.avena/" target="_blank"><img class="links"
+              src="resources/images/icons/instagram-logo.svg" alt="link a instagram"></a>
+        </li>
+        <li class="enlaces"><a href="https://www.youtube.com/channel/UCHDV9ojnI9Jy6XNFyAB9Jlw" target="_blank"><img
+              class="links" src="resources/images/icons/youtube-logo.svg" alt="link a youtube"></a>
+        </li>
+        <li class="enlaces"><a href="mailto:anabellaavena@gmail.com" target="_blank"><img class="links"
+              src="resources/images/icons/sobre-logo.svg" alt="link a email"></a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+  <!-- fin de header -->
 
-        <div class="mensaje-grid-contacto">
-            <div class="mensaje-container">
-                <p>A continuación puede dejar un comentario, sugerencia, solicitud o pregunta. llene los campos
-                    solicitados y le responderé al abrevedad.</p>
-            </div>
+  <!-- menú principal -->
+  <div class="menu-grid-contacto">
+    <nav class="navbar navbar-expand-md fondo-menu">
+      <div class="container-fluid d-flex justify-content-end">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a aria-current="page" href="portfolio.html">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a aria-current="page" href="about-me.html">Sobre Mí</a>
+            </li>
+            <li class="nav-item">
+              <a aria-current="page" href="https://akikodarlian.blogspot.com/" target="_blank">Blog</a>
+            </li>
+            <li class="nav-item">
+              <a aria-current="page" href="tienda.html">Tienda</a>
+            </li>
+            <li class="nav-item">
+              <a aria-current="page" href="contacto.html">Contacto</a>
+            </li>
+          </ul>
         </div>
-        <div class="formulario-grid-contacto">
-            <div class="form-container">
-                <form action="https://formsubmit.co/correo@servidor.com" method="post" enctype="text/plain">
-                    <!--no es un correo verdadero-->
-                    <label for="name">Nombre</label>
-                    <input type="text" name="name" id="name" size="30">
-                    <label for="apellido">Apellido</label>
-                    <input type="text" name="apellido" id="apellido" size="30">
-                    <br>
-                    <label for="email">correo de contacto</label>
-                    <input type="email" name="email" id="email" size="30" placeholder="correo@servidor.com">
-                    <br>
-                    <label for="mensaje">Mensaje</label>
-                    <textarea name="mensaje" id="mensaje" cols="30" rows="10"
-                        placeholder="escriba su mensaje aquí..."></textarea>
-                    <br>
-                    <input type="submit" name="Enviar">
-                    <input type="reset" name="Borrar">
-                </form>
-            </div>
+      </div>
+    </nav>
+  </div>
+  <!-- fin de menú principal -->
 
-        </div>
+  <div class="formulario-grid-contacto">
+    <div class="form-container">
+      <form class="formulario" action="https://formsubmit.co/anabellaavena@gmail.com" method="post"
+        enctype="text/plain">
+        <label for="name"></label>
+        <input class="form-field" type="text" name="name" id="name" placeholder="Nombre y Apellido">
+        <br>
+        <label for="email"></label>
+        <input class="form-field" type="text" name="email" id="email" placeholder="E-mail">
+        <br>
+        <label for="telefono"></label>
+        <input class="form-field" type="phone" name="telefono" id="telefono" placeholder="Teléfono">
+        <br>
+        <label for="mensaje"></label>
+        <textarea class="form-field" name="mensaje" id="mensaje" rows="10" placeholder="Mensaje"></textarea>
+        <br>
+        <input class="send-button" type="submit" name="Enviar">
+      </form>
 
-        <div class="footer-grid-contacto">
-            <!-- inicio de footer -->
-            <footer>
-                <div>
-                    <p><b>¡Gracias!</b></p>
-                </div>
-                <div><img class="imagen-despedida" src="resources/images/logos/PerfilC1.png"
-                        alt="imagen despedida con gato">
-                </div>
-                <div class="redes-sociales-container">
-                    <nav class="redes-sociales-nav">
-                        <ul class="redes-sociales">
-                            <li class="enlaces"><a href="mailto:anabellaavena@gmail.com"><img class="links"
-                                        src="resources/images/icons/sobre-logo.svg" alt="link a email"></a>
-                            </li>
-                            <li class="enlaces"><a href="http://www.instagram.com"><img class="links"
-                                        src="resources/images/icons/instagram-logo.svg" alt="link a instagram"></a>
-                            </li>
-                            <li class="enlaces"><a href="http://www.youtube.com"><img class="links"
-                                        src="resources/images/icons/youtube-logo.svg" alt="link a youtube"></a>
-                            </li>
-                            <li class="enlaces"><a href="http://www.pinterest.com"><img class="links"
-                                        src="resources/images/icons/pinterest-logo.svg" alt="link a pinterest"></a>
-                            </li>
-                            <li class="enlaces"><a href="http://www.patreon.com"><img class="links"
-                                        src="resources/images/icons/patreon-logo.svg" alt="link a patreon"></a></li>
-                        </ul>
-                    </nav>
-                </div>
-                <div class="legal">
-                    <p><b>© Anabella Avena 2022. All rights Reserved.</b></p>
-                </div>
-            </footer>
-            <!-- fin de footer -->
-        </div>
+      <div class="mensaje-container">
+        <p>Mi email es <b>anabellaavena@gmail.com</b><br>
+          <br> En este espacio podés <b>consultarme con confianza</b> por trabajos editoriales, ilustraciones aplicadas
+          a diseño de productos, o cualquier tipo de proyecto, del cual te gustaría que forme parte. <br>
+          <br> También podés <b>explicarme en detalle las necesidades de tu proyecto, su presupuesto, los tiempos de
+            entrega</b> y todo lo que sea importante que yo conozca al respecto para que nuestra comunicación sea
+          efectiva. <br>
+          <br> <b>¡Gracias por contar conmigo!</b>
+        </p>
+      </div>
+
     </div>
 
-    <!-- Scripts -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous">
-    </script>
+  </div>
+
+  <!-- inicio de footer -->
+  <footer class="footer-grid-contacto">
+    <div class="footer-container">
+      <div><img class="imagen-despedida" src="resources/images/logos/PerfilC1.png" alt="imagen despedida con gato">
+      </div>
+      <div class="redes-sociales-container">
+        <nav class="redes-sociales-nav">
+          <ul class="redes-sociales">
+            <li class="enlaces"><a href="https://www.instagram.com/anabella.avena/" target="_blank"><img class="links"
+                  src="resources/images/icons/instagram-logo.svg" alt="link a instagram"></a>
+            </li>
+            <li class="enlaces"><a href="https://www.youtube.com/channel/UCHDV9ojnI9Jy6XNFyAB9Jlw" target="_blank"><img
+                  class="links" src="resources/images/icons/youtube-logo.svg" alt="link a youtube"></a>
+            </li>
+            <li class="enlaces"><a href="mailto:anabellaavena@gmail.com" target="_blank"><img class="links"
+                  src="resources/images/icons/sobre-logo.svg" alt="link a email"></a>
+            </li>
+          </ul>
+        </nav>
+        <div class="legal">
+          <p><b>© Anabella Avena 2022. All rights Reserved.</b></p>
+        </div>
+        <div><a class="ir-al-inicio" href="#header">ir al inicio</a></div>
+      </div>
+    </div>
+  </footer>
+  <!-- fin de footer -->
+
+  <!-- Scripts -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous">
+  </script>
 
 </body>
 
