--- a/tienda.html
+++ b/tienda.html
@@ -2,212 +2,136 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+  <!-- Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 
-    <!-- AOS -->
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+  <!-- CSS -->
+  <link rel="stylesheet" href="style.css">
 
-    <!-- CSS -->
-    <link rel="stylesheet" href="style.css">
-
-    <title>Tienda</title>
+  <title>Tienda</title>
 </head>
 
-<body>
-    <div class="grid-container-tienda">
-        <div class="header-grid-tienda">
-            <!-- inicio de header -->
-            <header class="header-container">
-                <div class="logo-container"><a href="index.html"><img class="main-logo"
-                            src="resources/images/logos/PerfilA1.png" alt="Logo principal de home"></a></div>
-                <div class="title-container">
-                    <div>
-                        <h1 class="maintitle"><a class="maintitle" href="index.html">Anabella Avena</a></h1>
-                    </div>
-                    <div>
-                        <p class="subtitle">Ilustradora & Diseñadora Gráfica</p>
-                    </div>
-                </div>
-            </header>
-            <!-- fin de header -->
-        </div>
-        <div class="menu-grid-tienda">
-            <!-- menú principal -->
-            <nav class="navbar navbar-expand-md fondo-menu">
-                <div class="container-fluid d-flex justify-content-end">
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav mb-2 mb-lg-0">
-                            <li class="nav-item">
-                                <a aria-current="page" href="inicio.html">Inicio</a>
-                            </li>
-                            <li class="nav-item">
-                                <a aria-current="page" href="portfolio.html">Portfolio</a>
-                            </li>
-                            <li class="nav-item">
-                                <a aria-current="page" href="about-me.html">Sobre Mí</a>
-                            </li>
-                            <li class="nav-item">
-                                <a aria-current="page" href="tienda.html">Tienda</a>
-                            </li>
-                            <li class="nav-item">
-                                <a aria-current="page" href="contacto.html">Contacto</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
-            <!-- fin de menú principal -->
-
-            <!-- menú de tienda -->
-            <nav class="navbar navbar-expand-md fondo-menu">
-                <div class="container-fluid d-flex justify-content-center">
-                    <a class="navbar-brand enlaces" href="http://www.flashcookie.com">
-                        <img src="resources/images/icons/flashcookie.png" alt="flashcookie" width="40"
-                            class="d-inline-block align-text-top">
-                        flashcookie
-                    </a>
-                    <a class="navbar-brand enlaces" href="http://www.paypal.com">
-                        <img src="resources/images/icons/paypal-logo.svg" alt="paypal" width="30"
-                            class="d-inline-block align-text-top">
-                        flashcookie
-                    </a>
-                    <a class="navbar-brand enlaces" href="http://www.redbubble.com">
-                        <img src="resources/images/icons/redbubble-logo.svg" alt="redbubble" width="30"
-                            class="d-inline-block align-text-top">
-                        redbubble
-                    </a>
-                </div>
-            </nav>
-            <!-- fin de menú de tienda -->
-        </div>
-
-        <!-- sección novedades -->
-        <section class="productos-grid-tienda1">
-            <div class="productos-container">
-                <div class="seccion-titulo">
-                    <h3>Novedades</h3>
-                </div>
-                <section class="seccion-container">
-                    <div class="card" style="width: 18rem;">
-                        <img src="resources/images/trabajos/sanvalentin2020 IG2.jpg" class="card-img-top"
-                            alt="san valentin">
-                        <div class="card-body">
-                            <h5 class="card-title">San Valentín 2020</h5>
-                            <p class="card-text">Estas tarjetas muestran productos a vender y un link a la tienda donde se vende.</p>
-                            <a href="#" class="btn btn-primary">ver mas aquí</a>
-                        </div>
-                    </div>
-                    <div class="card" style="width: 18rem;">
-                        <img src="resources/images/trabajos/minutemen.jpg" class="card-img-top" alt="Minutemen">
-                        <div class="card-body">
-                            <h5 class="card-title">Minutemen</h5>
-                            <p class="card-text">Estas tarjetas muestran productos a vender y un link a la tienda donde se vende.</p>
-                            <a href="#" class="btn btn-primary">ver mas aquí</a>
-                        </div>
-                    </div>
-                    <div class="card" style="width: 18rem;">
-                        <img src="resources/images/trabajos/illustracion.jpg" class="card-img-top" alt="Ilustracion">
-                        <div class="card-body">
-                            <h5 class="card-title">Ilustraciones</h5>
-                            <p class="card-text">Estas tarjetas muestran productos a vender y un link a la tienda donde se vende.</p>
-                            <a href="#" class="btn btn-primary">ver mas aquí</a>
-                        </div>
-                </section>
-            </div>
-
-        </section>
-        <!-- Fin sección novedades -->
-
-        <section class="grid-air-tienda"></section>
-
-        <!-- sección tienda, colecciones -->
-        <section class="productos-grid-tienda2">
-            <div class="productos-container">
-                <div class="seccion-titulo">
-                    <h3>Colecciones</h3>
-                </div>
-                <section class="seccion-container">
-                    <div class="card" style="width: 18rem;">
-                        <img src="resources/images/trabajos/minutemen.jpg" class="card-img-top" alt="Minutemen">
-                        <div class="card-body">
-                            <h5 class="card-title">Minutemen</h5>
-                            <p class="card-text">Estas tarjetas muestran productos a vender y un link a la tienda donde se vende.</p>
-                            <a href="#" class="btn btn-primary">ver mas aquí</a>
-                        </div>
-                    </div>
-                    <div class="card" style="width: 18rem;">
-                        <img src="resources/images/trabajos/illustracion.jpg" class="card-img-top" alt="Ilustracion">
-                        <div class="card-body">
-                            <h5 class="card-title">Ilustraciones</h5>
-                            <p class="card-text">Estas tarjetas muestran productos a vender y un link a la tienda donde se vende.</p>
-                            <a href="#" class="btn btn-primary">ver mas aquí</a>
-                        </div>
-                    </div>
-                    <div class="card" style="width: 18rem;">
-                        <img src="resources/images/trabajos/historieta.jpg" class="card-img-top" alt="Historieta">
-                        <div class="card-body">
-                            <h5 class="card-title">Historietas</h5>
-                            <p class="card-text">Estas tarjetas muestran productos a vender y un link a la tienda donde se vende.</p>
-                            <a href="#" class="btn btn-primary">ver mas aquí</a>
-                        </div>
-                    </div>
-                </section>
-            </div>
-        </section>
-        <!-- Fin sección tienda -->
-
-        <div class="footer-grid-tienda">
-            <!-- inicio de footer -->
-            <footer>
-                <div>
-                    <p><b>¡Gracias!</b></p>
-                </div>
-                <div><img class="imagen-despedida" src="resources/images/logos/PerfilC1.png"
-                        alt="imagen despedida con gato">
-                </div>
-                <div class="redes-sociales-container">
-                    <nav class="redes-sociales-nav">
-                        <ul class="redes-sociales">
-                            <li class="enlaces"><a href="mailto:anabellaavena@gmail.com"><img class="links"
-                                        src="resources/images/icons/sobre-logo.svg" alt="link a email"></a>
-                            </li>
-                            <li class="enlaces"><a href="http://www.instagram.com"><img class="links"
-                                        src="resources/images/icons/instagram-logo.svg" alt="link a instagram"></a>
-                            </li>
-                            <li class="enlaces"><a href="http://www.youtube.com"><img class="links"
-                                        src="resources/images/icons/youtube-logo.svg" alt="link a youtube"></a>
-                            </li>
-                            <li class="enlaces"><a href="http://www.pinterest.com"><img class="links"
-                                        src="resources/images/icons/pinterest-logo.svg" alt="link a pinterest"></a>
-                            </li>
-                            <li class="enlaces"><a href="http://www.patreon.com"><img class="links"
-                                        src="resources/images/icons/patreon-logo.svg" alt="link a patreon"></a></li>
-                        </ul>
-                    </nav>
-                </div>
-                <div class="legal">
-                    <p><b>© Anabella Avena 2022. All rights Reserved.</b></p>
-                </div>
-            </footer>
-            <!-- fin de footer -->
-        </div>
+<body class="grid-container-tienda">
+  <!-- inicio de header -->
+  <header class="header-grid-tienda" id="header">
+    <div class="logo-container"><a href="index.html"><img class="main-logo" src="resources/images/logos/PerfilF1.png"
+          alt="Logo principal de home"></a>
     </div>
+    <div class="title-container">
+      <div>
+        <h1 class="maintitle"><a class="maintitle" href="index.html">Anabella Avena</a></h1>
+      </div>
+      <div>
+        <p class="subtitle">Ilustradora Freelance</p>
+      </div>
+    </div>
+    <nav class="redes-sociales-nav-top">
+      <ul class="redes-sociales-top">
+        <li class="enlaces"><a href="https://www.instagram.com/anabella.avena/" target="_blank"><img class="links"
+              src="resources/images/icons/instagram-logo.svg" alt="link a instagram"></a>
+        </li>
+        <li class="enlaces"><a href="https://www.youtube.com/channel/UCHDV9ojnI9Jy6XNFyAB9Jlw" target="_blank"><img
+              class="links" src="resources/images/icons/youtube-logo.svg" alt="link a youtube"></a>
+        </li>
+        <li class="enlaces"><a href="mailto:anabellaavena@gmail.com" target="_blank"><img class="links"
+              src="resources/images/icons/sobre-logo.svg" alt="link a email"></a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+  <!-- fin de header -->
 
-    <!-- Scripts -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous">
-    </script>
+  <!-- menú principal -->
+  <div class="menu-grid-index">
+    <nav class="navbar navbar-expand-md fondo-menu">
+      <div class="container-fluid d-flex justify-content-end">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a aria-current="page" href="portfolio.html">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a aria-current="page" href="about-me.html">Sobre Mí</a>
+            </li>
+            <li class="nav-item">
+              <a aria-current="page" href="https://akikodarlian.blogspot.com/" target="_blank">Blog</a>
+            </li>
+            <li class="nav-item">
+              <a aria-current="page" href="tienda.html">Tienda</a>
+            </li>
+            <li class="nav-item">
+              <a aria-current="page" href="contacto.html">Contacto</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </div>
+  <!-- fin de menú principal -->
+
+  <!-- sección tienda -->
+  <section class="productos-grid-tienda">
+    <nav>
+      <ul class="tiendas-links">
+        <li>
+          <a href="https://www.inprnt.com/" target="_blank"><img src="resources/images/icons/inprint-logo.svg"
+              alt="inprint-logo" height="50px"></a>
+        </li>
+        <li>
+          <a href="https://www.redbubble.com/" target="_blank"><img src="resources/images/icons/redbubble-logo.svg"
+              alt="redbubble-logo" height="50px"></a>
+        </li>
+        <li>
+          <a href="https://flashcookie.com/" target="_blank"><img src="resources/images/icons/flashcookie-logo.svg"
+              alt="flashcookie-logo" height="150px" data-bs-toggle="tooltip" data-bs-placement="bottom"
+              title="Aquí podés comprar desde Argentina"></a>
+        </li>
+      </ul>
+    </nav>
+  </section>
+  <!-- Fin sección tienda -->
+
+  <!-- inicio de footer -->
+  <footer class="footer-grid-tienda">
+    <div class="footer-container">
+      <div><img class="imagen-despedida" src="resources/images/logos/PerfilC1.png" alt="imagen despedida con gato">
+      </div>
+      <div class="redes-sociales-container">
+        <nav class="redes-sociales-nav">
+          <ul class="redes-sociales">
+            <li class="enlaces"><a href="https://www.instagram.com/anabella.avena/" target="_blank"><img class="links"
+                  src="resources/images/icons/instagram-logo.svg" alt="link a instagram"></a>
+            </li>
+            <li class="enlaces"><a href="https://www.youtube.com/channel/UCHDV9ojnI9Jy6XNFyAB9Jlw" target="_blank"><img
+                  class="links" src="resources/images/icons/youtube-logo.svg" alt="link a youtube"></a>
+            </li>
+            <li class="enlaces"><a href="mailto:anabellaavena@gmail.com" target="_blank"><img class="links"
+                  src="resources/images/icons/sobre-logo.svg" alt="link a email"></a>
+            </li>
+          </ul>
+        </nav>
+        <div class="legal">
+          <p><b>© Anabella Avena 2022. All rights Reserved.</b></p>
+        </div>
+        <div><a class="ir-al-inicio" href="#header">ir al inicio</a></div>
+      </div>
+    </div>
+  </footer>
+  <!-- fin de footer -->
+
+  <!-- Scripts -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous">
+  </script>
 
 </body>
 
