--- a/about-me.html
+++ b/about-me.html
@@ -10,9 +10,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 
-    <!-- AOS -->
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-
     <!-- CSS -->
     <link rel="stylesheet" href="style.css">
 
@@ -20,165 +17,177 @@
 
 </head>
 
-<body>
-    <div class="grid-container-aboutme">
-        <div class="header-grid-aboutme">
-            <!-- inicio de header -->
-            <header class="header-container">
-                <div class="logo-container"><a href="index.html"><img class="main-logo"
-                            src="resources/images/logos/PerfilE1.png" alt="Logo principal de home"></a></div>
-                <div class="title-container">
-                    <div>
-                        <h1 class="maintitle"><a class="maintitle" href="index.html">Anabella Avena</a></h1>
-                    </div>
-                    <div>
-                        <p class="subtitle">Ilustradora & Diseñadora Gráfica</p>
-                    </div>
+<body class="grid-container-aboutme">
+
+    <!-- inicio de header -->
+    <header class="header-grid-aboutme" id="header">
+        <div class="logo-container"><a href="index.html"><img class="main-logo"
+                    src="resources/images/logos/PerfilF1.png" alt="Logo principal de home"></a>
+        </div>
+        <div class="title-container">
+            <div>
+                <h1 class="maintitle"><a class="maintitle" href="index.html">Anabella Avena</a></h1>
+            </div>
+            <div>
+                <p class="subtitle">Ilustradora Freelance</p>
+            </div>
+        </div>
+        <nav class="redes-sociales-nav-top">
+            <ul class="redes-sociales-top">
+                <li class="enlaces"><a href="https://www.instagram.com/anabella.avena/" target="_blank"><img
+                            class="links" src="resources/images/icons/instagram-logo.svg" alt="link a instagram"></a>
+                </li>
+                <li class="enlaces"><a href="https://www.youtube.com/channel/UCHDV9ojnI9Jy6XNFyAB9Jlw"
+                        target="_blank"><img class="links" src="resources/images/icons/youtube-logo.svg"
+                            alt="link a youtube"></a>
+                </li>
+                <li class="enlaces"><a href="mailto:anabellaavena@gmail.com" target="_blank"><img class="links"
+                            src="resources/images/icons/sobre-logo.svg" alt="link a email"></a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <!-- fin de header -->
+
+    <!-- menú principal -->
+    <div class="menu-grid-aboutme">
+        <nav class="navbar navbar-expand-md fondo-menu">
+            <div class="container-fluid d-flex justify-content-end">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a aria-current="page" href="portfolio.html">Portfolio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a aria-current="page" href="about-me.html">Sobre Mí</a>
+                        </li>
+                        <li class="nav-item">
+                            <a aria-current="page" href="https://akikodarlian.blogspot.com/" target="_blank">Blog</a>
+                        </li>
+                        <li class="nav-item">
+                            <a aria-current="page" href="tienda.html">Tienda</a>
+                        </li>
+                        <li class="nav-item">
+                            <a aria-current="page" href="contacto.html">Contacto</a>
+                        </li>
+                    </ul>
                 </div>
-            </header>
-            <!-- fin de header -->
-        </div>
-        <div class="menu-grid-aboutme">
-            <!-- menú principal -->
-            <nav class="navbar navbar-expand-md fondo-menu">
-                <div class="container-fluid d-flex justify-content-end">
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav mb-2 mb-lg-0">
-                            <li class="nav-item">
-                                <a aria-current="page" href="inicio.html">Inicio</a>
-                            </li>
-                            <li class="nav-item">
-                                <a aria-current="page" href="portfolio.html">Portfolio</a>
-                            </li>
-                            <li class="nav-item">
-                                <a aria-current="page" href="about-me.html">Sobre Mí</a>
-                            </li>
-                            <li class="nav-item">
-                                <a aria-current="page" href="tienda.html">Tienda</a>
-                            </li>
-                            <li class="nav-item">
-                                <a aria-current="page" href="contacto.html">Contacto</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
-            <!-- fin de menú principal -->
-        </div>
-        <div class="presentation-grid-aboutme-one">
-            <article class="presentation">
-                <h4 class="presentation-title-start">Introducción</h4>
-                <p class="presentation text-right">
-                    ¡Hola! Mi nombre es Anabella Avena (¡Claro que podés llamarme Ana!), crecí en la ciudad de Tunuyán,
-                    ubicada en un valle entre montañas en Mendoza, Argentina. Actualmente estoy viviendo en Godoy Cruz,
-                    Mendoza, donde trabajo como ilustradora freelance y diseñadora gráfica a tiempo parcial, mientras
-                    que en mis tiempos libres realizo proyectos de ilustración y papelería digital ilustrada para mis
-                    tiendas online.
-                </p>
-            </article>
-        </div>
+            </div>
+        </nav>
+    </div>
+    <!-- fin de menú principal -->
 
-        <div class="presentation-grid-aboutme-two">
-            <article class="presentation">
-                <h4 class="presentation-title-end">Comienzos</h4>
-                <p class="presentation text-left">
-                    Mi amor por la ilustración empezó desde pequeña, me encantaba ver animé, leer historietas, colorear
-                    libros para pintar y pasarme horas leyendo y observando los detalles de las ilustraciones de los
-                    libros y revistas que me regalaban mis padres(a quienes por cierto, les estoy muy agradecida). En la
-                    Universidad tuve la oportunidad de estudiar la carrera de diseño gráfico que me fue de utilidad para
-                    comprender conceptos y aprender herramientas que me ayudan en mi trabajo día a día.
-                </p>
-            </article>
-        </div>
+    <div class="presentation-grid-aboutme-one">
+        <article class="presentation">
+            <h4 class="presentation-title-start">¡Hola!</h4>
+            <p class="presentation text-right">
+                Mi nombre es Anabella Avena (¡Claro que podés llamarme Ana!), crecí en la ciudad de Tunuyán,
+                ubicada en un valle entre montañas en Mendoza, Argentina. <br>
+                <br>
+                Actualmente estoy viviendo en Godoy Cruz, Mendoza, donde trabajo como ilustradora freelance y diseñadora
+                gráfica a tiempo parcial, mientras
+                que en mis tiempos libres realizo proyectos de ilustración y papelería digital ilustrada para mis
+                tiendas online.
+            </p>
+        </article>
+    </div>
 
-        <div class="presentation-grid-aboutme-three">
-            <article class="presentation">
-                <h4 class="presentation-title-start">Inspiración</h4>
-                <p class="presentation text-right">
-                    Tengo varias fuentes de inspiración en las que baso mi trabajo. Mi movimiento artísitco e historico
-                    favorito es el impresionismo, que me hace admirar la forma en la que sus representantes estudiaban y
-                    plasmaban la luz. También me siento fuertemente influenciada por la cultura japonesa y la magia
-                    oriental. En ilustraciones me gusta experimentar con el color, el contraste y explorar conceptos
-                    como: <br>
-                    El amor, la magia, otras formas de vida, la naturaleza y la vastedad del universo. Por un lado, para
-                    algunos proyectos, dibujo lo que me hubiera gustado ver ilustrado de niña, por lo que parte de mi
-                    trabajo se orienta a un público adolescente e infantil. Mientras que por otra parte, ilustro también
-                    sobre mi vida como mujer adulta, mis valores y mi forma de ver el mundo ahora. Por lo que esta parte
-                    de mi trabajo está orientada a un público adulto que disfruta de estas temáticas.
-                </p>
-            </article>
-        </div>
+    <div class="presentation-grid-aboutme-two">
+        <article class="presentation">
+            <h4 class="presentation-title-end">Comienzos</h4>
+            <p class="presentation text-left">
+                Mi amor por la ilustración empezó desde pequeña, me encantaba ver animé, leer historietas, colorear
+                libros para pintar y pasarme horas leyendo y observando los detalles de las ilustraciones de los
+                libros y revistas que me regalaban mis padres(a quienes por cierto, les estoy muy agradecida). <br>
+                <br>
+                En la Universidad tuve la oportunidad de estudiar la carrera de diseño gráfico que me fue de utilidad
+                para
+                comprender conceptos y aprender herramientas que me ayudan en mi trabajo día a día.
+            </p>
+        </article>
+    </div>
 
-        <div class="presentation-grid-aboutme-four">
-            <article class="presentation">
-                <h4 class="presentation-title-end">Datos Curiosos</h4>
-                <p class="presentation text-left">
-                    Algunas cosas interesantes sobre mí: Mi compañera de trabajo es una gatita de pelo largo llamada
-                    Miyuki. Me encantan los aromas y sabores cítricos, especialmente el limon. Disfruto mucho diseñando
-                    e ilustrando productos físicos como ropa, juegos y juguetes, o elementos decorativos para el hogar.
-                    Me fascina dar caminatas diarias por el parque para admirar la belleza de los árboles. Y mi comida
-                    favorita es el sushi que prepara Robb, mi pareja.
-                </p>
-            </article>
-        </div>
+    <div class="presentation-grid-aboutme-three">
+        <article class="presentation">
+            <h4 class="presentation-title-start">Inspiración</h4>
+            <p class="presentation text-right">
+                Tengo varias fuentes de inspiración en las que baso mi trabajo. Mi movimiento artísitco e historico
+                favorito es el impresionismo, que me hace admirar la forma en la que sus representantes estudiaban y
+                plasmaban la luz. También me siento fuertemente influenciada por la cultura japonesa y la magia
+                oriental. <br>
+                <br>
+                En ilustraciones me gusta experimentar con el color, el contraste y explorar conceptos como:
+                El amor, la magia, otras formas de vida, la naturaleza y la vastedad del universo. Por un lado, para
+                algunos proyectos, dibujo lo que me hubiera gustado ver ilustrado de niña, por lo que parte de mi
+                trabajo se orienta a un público adolescente e infantil. Mientras que por otra parte, ilustro también
+                sobre mi vida como mujer adulta, mis valores y mi forma de ver el mundo ahora. Por lo que esta parte
+                de mi trabajo está orientada a un público adulto que disfruta de estas temáticas.
+            </p>
+        </article>
+    </div>
 
-        <div class="grid-air-aboutme"></div>
+    <div class="presentation-grid-aboutme-four">
+        <article class="presentation">
+            <h4 class="presentation-title-end">Curiosidades</h4>
+            <p class="presentation text-left">
+                Algunas cosas interesantes sobre mí: Mi compañera de trabajo es una gatita de pelo largo llamada
+                Miyuki. Me encantan los aromas y sabores cítricos, especialmente el limon. Disfruto mucho diseñando
+                e ilustrando productos físicos como ropa, juegos y juguetes, o elementos decorativos para el hogar.
+                Me fascina dar caminatas diarias por el parque para admirar la belleza de los árboles. Y mi comida
+                favorita es el sushi que prepara Robb, mi pareja.
+            </p>
+        </article>
+    </div>
 
-        <div class="photo-one-aboutme">
-            <img class="photo-aboutme" src="resources/images/aboutme/photo1.jpg" alt="anabella">
-        </div>
-        <div class="photo-two-aboutme">
-            <img class="photo-aboutme" src="resources/images/aboutme/photo3.jpg" alt="niña anabella">
-        </div>
-        <div class="photo-three-aboutme">
-            <img class="photo-aboutme" src="resources/images/aboutme/photo4.jpg" alt="Anabella">
-        </div>
+    <div class="photo-one-aboutme">
+        <img class="photo-aboutme" src="resources/images/aboutme/photo1.jpg" alt="anabella">
+    </div>
+    <div class="photo-two-aboutme">
+        <img class="photo-aboutme" src="resources/images/aboutme/photo3.jpg" alt="niña anabella">
+    </div>
+    <div class="photo-three-aboutme">
+        <img class="photo-aboutme" src="resources/images/aboutme/photo4.jpg" alt="Anabella">
+    </div>
 
-        <div class="photo-four-aboutme">
-            <img class="photo-aboutme" src="resources/images/aboutme/photo2.jpg" alt="miyuki">
-        </div>
+    <div class="photo-four-aboutme">
+        <img class="photo-aboutme" src="resources/images/aboutme/photo2.jpg" alt="miyuki">
+    </div>
 
-        <div class="footer-grid-aboutme">
-            <!-- inicio de footer -->
-            <footer>
-                <div>
-                    <p><b>¡Gracias!</b></p>
-                </div>
-                <div><img class="imagen-despedida" src="resources/images/logos/PerfilC1.png"
-                        alt="imagen despedida con gato">
-                </div>
-                <div class="redes-sociales-container">
-                    <nav class="redes-sociales-nav">
-                        <ul class="redes-sociales">
-                            <li class="enlaces"><a href="mailto:anabellaavena@gmail.com"><img class="links"
-                                        src="resources/images/icons/sobre-logo.svg" alt="link a email"></a>
-                            </li>
-                            <li class="enlaces"><a href="http://www.instagram.com"><img class="links"
-                                        src="resources/images/icons/instagram-logo.svg" alt="link a instagram"></a>
-                            </li>
-                            <li class="enlaces"><a href="http://www.youtube.com"><img class="links"
-                                        src="resources/images/icons/youtube-logo.svg" alt="link a youtube"></a>
-                            </li>
-                            <li class="enlaces"><a href="http://www.pinterest.com"><img class="links"
-                                        src="resources/images/icons/pinterest-logo.svg" alt="link a pinterest"></a>
-                            </li>
-                            <li class="enlaces"><a href="http://www.patreon.com"><img class="links"
-                                        src="resources/images/icons/patreon-logo.svg" alt="link a patreon"></a></li>
-                        </ul>
-                    </nav>
-                </div>
+    <!-- inicio de footer -->
+    <footer class="footer-grid-aboutme">
+        <div class="footer-container">
+            <div><img class="imagen-despedida" src="resources/images/logos/PerfilC1.png"
+                    alt="imagen despedida con gato">
+            </div>
+            <div class="redes-sociales-container">
+                <nav class="redes-sociales-nav">
+                    <ul class="redes-sociales">
+                        <li class="enlaces"><a href="https://www.instagram.com/anabella.avena/" target="_blank"><img
+                                    class="links" src="resources/images/icons/instagram-logo.svg"
+                                    alt="link a instagram"></a>
+                        </li>
+                        <li class="enlaces"><a href="https://www.youtube.com/channel/UCHDV9ojnI9Jy6XNFyAB9Jlw"
+                                target="_blank"><img class="links" src="resources/images/icons/youtube-logo.svg"
+                                    alt="link a youtube"></a>
+                        </li>
+                        <li class="enlaces"><a href="mailto:anabellaavena@gmail.com" target="_blank"><img class="links"
+                                    src="resources/images/icons/sobre-logo.svg" alt="link a email"></a>
+                        </li>
+                    </ul>
+                </nav>
                 <div class="legal">
                     <p><b>© Anabella Avena 2022. All rights Reserved.</b></p>
                 </div>
-            </footer>
-            <!-- fin de footer -->
+                <div><a class="ir-al-inicio" href="#header">ir al inicio</a></div>
+            </div>
         </div>
-    </div>
+    </footer>
+    <!-- fin de footer -->
 
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
